<resources>
    <string name="app_name">Calculate</string>

    <string name="numberOne">Number one</string>
    <string name="numberTwo">Number two</string>
    <string name="action">Action</string>
    <string name="result">Result</string>
    <string name="reset">Reset</string>

    <string name="writeNumberOne">Writing number one</string>
    <string name="writeNumberTwo">Writing number two</string>

</resources>